--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,8 @@
     "**/.*"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#~0.2.4"
+    "polymer": "Polymer/polymer#~0.2.4",
+    "google-signin": "GoogleWebComponents/google-signin#~0.0.6",
+    "cors-upload-sample": "googledrive/cors-upload-sample#master"
   }
 }
