--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,9 @@
 {
   "name": "google-youtube-upload",
   "version": "0.0.1",
-  "authors": ["Jeff Posnick <jeffy@google.com>"],
+  "authors": [
+    "Jeff Posnick <jeffy@google.com>"
+  ],
   "description": "Upload videos to YouTube from your browser.",
   "keywords": "youtube, upload, polymer, web-components",
   "main": "google-youtube-upload.html",
@@ -12,7 +14,6 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#~0.2.4",
-    "google-signin": "GoogleWebComponents/google-signin#~0.0.6",
-    "cors-upload-sample": "googledrive/cors-upload-sample#master"
+    "google-signin": "GoogleWebComponents/google-signin#~0.0.6"
   }
 }
