--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#~0.2.4",
+    "core-ajax": "Polymer/core-ajax#~0.2.4",
     "google-signin": "GoogleWebComponents/google-signin#~0.0.6"
   }
 }
