--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#~0.2.4",
-    "google-signin": "GoogleWebComponents/google-signin#~0.0.6"
+    "google-signin": "GoogleWebComponents/google-signin#~0.0.6",
+    "google-youtube": "GoogleWebComponents/google-youtube#master"
   }
 }
