Update bower jso

--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,21 @@
 {
   "name": "google-youtube-upload",
   "version": "0.0.1",
+  "description": "Upload videos to YouTube from your browser.",
+  "homepage": "https://github.com/googlewebcomponents/google-youtube-upload",
+  "main": "google-youtube-upload.html",
   "authors": [
     "Jeff Posnick <jeffy@google.com>"
   ],
-  "description": "Upload videos to YouTube from your browser.",
+  "license": "Apache2",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests",
+    "../"
+  ],
   "keywords": [
     "google",
     "youtube",
@@ -12,12 +23,6 @@
     "polymer",
     "web-components",
     "web-component"
-  ],
-  "main": "google-youtube-upload.html",
-  "license": "Apache2",
-  "homepage": "https://github.com/googlewebcomponents/google-youtube-upload",
-  "ignore": [
-    "**/.*"
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#~0.3.3",
