--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "google-youtube-upload",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Upload videos to YouTube from your browser.",
-  "homepage": "https://github.com/googlewebcomponents/google-youtube-upload",
+  "homepage": "https://googlewebcomponents.github.io/google-youtube-upload",
   "main": "google-youtube-upload.html",
   "authors": [
     "Jeff Posnick <jeffy@google.com>"
@@ -25,9 +25,9 @@
     "web-component"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#~0.3.3",
-    "google-signin": "GoogleWebComponents/google-signin#~0.0.7",
-    "google-youtube": "GoogleWebComponents/google-youtube#~0.0.2",
-    "cors-upload-sample": "jeffposnick/cors-upload-sample#master"
+    "cors-upload-sample": "jeffposnick/cors-upload-sample#master",
+    "google-signin": "GoogleWebComponents/google-signin#~0.1.0",
+    "google-youtube": "GoogleWebComponents/google-youtube#~0.0.5",
+    "polymer": "Polymer/polymer#>=0.4.0 <1.0.0"
   }
 }
