--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
   ],
   "dependencies": {
     "cors-upload-sample": "googledrive/cors-upload-sample#master",
-    "google-signin": "GoogleWebComponents/google-signin#~0.2.0",
+    "google-apis": "GoogleWebComponents/google-apis#~0.4.3",
+    "google-signin": "GoogleWebComponents/google-signin#~0.3.0",
     "google-youtube": "GoogleWebComponents/google-youtube#~1.0.1",
     "polymer": "Polymer/polymer#^0.5.1"
   }
