--- a/bower.json
+++ b/bower.json
@@ -25,9 +25,9 @@
     "web-component"
   ],
   "dependencies": {
-    "cors-upload-sample": "googledrive/cors-upload-sample#master",
-    "google-signin": "GoogleWebComponents/google-signin#~0.2.0",
-    "google-youtube": "GoogleWebComponents/google-youtube#~1.0.1",
-    "polymer": "Polymer/polymer#^0.5.1"
+    "polymer": "Polymer/polymer#0.8-preview",
+    "google-signin": "GoogleWebComponents/google-signin#0.8-preview",
+    "google-youtube": "GoogleWebComponents/google-youtube#0.8-preview",
+    "cors-upload-sample": "googledrive/cors-upload-sample#master"
   }
 }
