--- a/bower.json
+++ b/bower.json
@@ -9,12 +9,9 @@
   ],
   "license": "Apache-2.0",
   "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests",
-    "../"
+    "/.*",
+    "/test/",
+    "/demo/"
   ],
   "keywords": [
     "google",
@@ -25,12 +22,12 @@
     "web-component"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#v0.8.0-rc.7",
+    "polymer": "Polymer/polymer#v0.9.0-rc.1",
     "google-signin": "GoogleWebComponents/google-signin#0.8-preview",
-    "google-youtube": "GoogleWebComponents/google-youtube#0.8-preview",
     "cors-upload-sample": "googledrive/cors-upload-sample#master"
   },
   "devDependencies": {
-    "iron-doc-viewer": "PolymerElements/iron-doc-viewer#^0.8.8"
+    "google-youtube": "GoogleWebComponents/google-youtube#0.8-preview",
+    "iron-component-page": "PolymerElements/iron-component-page#^0.9.1"
   }
 }
