--- a/bower.json
+++ b/bower.json
@@ -22,12 +22,12 @@
     "web-component"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^0.9.0",
-    "google-signin": "GoogleWebComponents/google-signin#1.0.0",
+    "polymer": "Polymer/polymer#^1.0.0",
+    "google-signin": "GoogleWebComponents/google-signin#^1.0.0",
     "cors-upload-sample": "googledrive/cors-upload-sample#master"
   },
   "devDependencies": {
-    "google-youtube": "GoogleWebComponents/google-youtube#2.0.0",
-    "iron-component-page": "PolymerElements/iron-component-page#^0.9.1"
+    "google-youtube": "GoogleWebComponents/google-youtube#^1.1.0",
+    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0"
   }
 }
