@demo fix: googlewebcomponents#15

--- a/bower.json
+++ b/bower.json
@@ -10,8 +10,7 @@
   "license": "Apache-2.0",
   "ignore": [
     "/.*",
-    "/test/",
-    "/demo/"
+    "/test/"
   ],
   "keywords": [
     "google",
