--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "google-youtube-upload",
-  "version": "1.1.2",
+  "version": "2.0.0",
   "description": "Upload videos to YouTube from your browser.",
   "homepage": "https://googlewebcomponents.github.io/google-youtube-upload",
   "main": "google-youtube-upload.html",
@@ -21,12 +21,14 @@
     "web-component"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.0.0",
-    "google-signin": "GoogleWebComponents/google-signin#^1.0.0",
-    "cors-upload-sample": "googledrive/cors-upload-sample#master"
+    "cors-upload-sample": "googledrive/cors-upload-sample#master",
+    "google-apis": "GoogleWebComponents/google-apis#^1.1.3",
+    "google-signin": "GoogleWebComponents/google-signin#^1.2.0",
+    "polymer": "Polymer/polymer#^1.2.3"
   },
   "devDependencies": {
-    "google-youtube": "GoogleWebComponents/google-youtube#^1.1.0",
-    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0"
+    "google-youtube": "GoogleWebComponents/google-youtube#^1.1.2",
+    "iron-component-page": "PolymerElements/iron-component-page#^1.1.2",
+    "iron-pages": "PolymerElements/iron-pages#^1.0.4"
   }
 }
