--- a/bower.json
+++ b/bower.json
@@ -22,13 +22,17 @@
   ],
   "dependencies": {
     "cors-upload-sample": "googledrive/cors-upload-sample#master",
+    "iron-pages": "PolymerElements/iron-pages#^1.0.4",
     "google-apis": "GoogleWebComponents/google-apis#^1.1.3",
     "google-signin": "GoogleWebComponents/google-signin#^1.2.0",
-    "polymer": "Polymer/polymer#^1.2.3"
+    "polymer": "Polymer/polymer#^1.2.3",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#~1.2.2",
+    "paper-fab": "PolymerElements/paper-fab#~1.1.0",
+    "paper-styles": "PolymerElements/paper-styles#~1.0.13",
+    "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.5"
   },
   "devDependencies": {
     "google-youtube": "GoogleWebComponents/google-youtube#^1.1.2",
-    "iron-component-page": "PolymerElements/iron-component-page#^1.1.2",
-    "iron-pages": "PolymerElements/iron-pages#^1.0.4"
+    "iron-component-page": "PolymerElements/iron-component-page#^1.1.2"
   }
 }
